# expert-spork

./: LICENSE
control-service/tests/: pyproject.toml
control-service/tests/integration/: conftest.py  test_config.py  test_firmware.py  test_logs.py  test_services.py  test_time.py
oldServiceSource/src/dss-backend/: BackendController.h  BackendSignals.h  CMakeLists.txt  ConfigParser.cpp  Configuration.cpp
src/dss-core/: AlarmId.h  AlarmLevel.cpp  AlarmLevel.h  CMakeLists.txt  CameraApiAdapter.h  Device.h  DeviceApiAdapter.h  DeviceClass.cpp  DeviceController.h  DeviceHwInfoSignals.h  DeviceIdMapping.cpp  DeviceState.cpp  DeviceState.h  DeviceStateSignals.h  DeviceTypeControl.h  DeviceWorkzone.cpp  DeviceWorkzoneSector.cpp  Domains.h  JammerAutoDefenseControl.h  JammerBand.h  JammerInfo.h  JammerTimeoutPersistent.cpp  ProviderSignals.h  SensorDevice.h  SensorJammerSignals.h  SensorModel.h  SensorNotifier.cpp  SensorProperties.h  TargetApiAdapter.cpp  TargetApiAdapter.h  TargetClass.h  TargetController.cpp  TargetController.h  TargetData.h  TargetId.h  TargetNotifier.h  Track.h  TrackApiAdapter.cpp  TrackApiAdapter.h  TrackController.cpp  (+4 more)
src/dss-core/database/: DbService.cpp  DbServiceFactory.cpp  DbServiceFactory.h  JammerTimeoutStatusDbHelper.cpp
src/dss-core/json/: AlarmStatusVsJson.h  DeviceHwInfoVsJson.cpp  DevicePositionVsJson.h  DeviceWorkzoneSectorVsJson.h  DeviceWorkzoneVsJson.cpp  JammerInfoVsJson.cpp  QtGeoJson.h  TargetDataVsJson.cpp  TargetPositionVsJson.cpp
src/dss-core/license/: LicenseController.cpp
src/dss-core/rest/: ApiRestServer.cpp
target-service/: .clang-format  .clang-tidy  .clazy  .cspell.json  .dockerignore  .gitattributes  .gitignore  .gitlab-ci.yml  .gitmodules  .linterignore  .linterignore-local  .vacuum  CMakeLists.txt  Dockerfile  LICENSE.txt  README.md  compose.yaml  dev-packages.apt  devspace.local-env.yaml  devspace.yaml  dss-target-provider.cspell.dict  entrypoint.sh
target-service/.gitlab/issue_templates/: Bug.md  Feature.md  Internal.md
target-service/cmake/: make.cmake  pack.cmake  test.cmake
target-service/cmake/go-make/: golang.cmake
target-service/cmake/make/: cross-toolchain.cmake  files.cmake  generation.cmake  header-lint.cmake  items.cmake  paths.cmake  platform.cmake  qt.cmake  targets.cmake
target-service/cmake/pack/: deb.cmake  rpm.cmake  tgz.cmake
target-service/cmake/templates/: paths.h.in
target-service/cmake/tools/: .clang-format  .clang-tidy  publish.sh  remove_module.sh  statistics.sh  translate.sh  trupdate.sh
target-service/configs/: render_common.sh  render_config.sh  render_config_alia.sh  render_config_generic.sh  render_config_radariq.sh  render_config_skycope.sh  render_config_tamerlan.sh
target-service/configs/defaults/: alia.env  env.yaml  generic.env  radariq.env  set_profiles_defaults.sh  skycope.env  tamerlan.env
target-service/configs/dev/: env.yaml
target-service/docs/api/: dss-sensor-schema.yaml  dss-target-service-schema.yaml  dss-target-service-ws.yaml  skycope-openapi.yaml
target-service/dss-target-service/: CMakeLists.txt  main.cpp
target-service/examples/: CMakeLists.txt  Dockerfile  compose.yaml  dev-packages.apt  devspace.local-env.yaml  devspace.yaml
target-service/examples/dss-sensor-imitator/: ApiRestServer.cpp  ApiRestServer.h  CMakeLists.txt  DiagnosticDataGenerator.cpp  DiagnosticDataGenerator.h  SensorTargetDataGenerator.cpp  SensorTargetDataGenerator.h  Settings.h  WsSensorTargetPublishService.cpp  WsSensorTargetPublishService.h  main.cpp
target-service/examples/dss-tamerlan-imitator/: ApplicationFactory.cpp  ApplicationFactory.h  CMakeLists.txt  CommandLineParser.cpp  CommandLineParser.h  JammerChannelParameters.h  JammerModel.cpp  JammerModel.h  ModbusDataUnitsDef.h  ModbusServer.h  ModbusServerController.cpp  ModbusServerController.h  ModbusTcpServer.cpp  ModbusTcpServer.h  SensorChannelParameters.h  SensorModel.cpp  SensorModel.h  SerialNumberGenerator.cpp  SerialNumberGenerator.h  ServiceRole.h  main.cpp
target-service/examples/tamerlan-cli/: CMakeLists.txt  CommandType.cpp  CommandType.h  TestClient.cpp  TestClient.h  main.cpp
target-service/migrations/: 20250309214253_initial.sql  apply.sh  atlas.sum  schema.hcl
target-service/modules/ci/: .gitlab-ci.yml  static-checks.yml
target-service/modules/cpp-httplib/: httplib.h
target-service/modules/gqtest/: .gitignore  CMakeLists.txt  README.md  gqtest.cmake
target-service/modules/mpkit/: .clang-tidy  .clazy  .cspell.json  .gitignore  .gitlab-ci.yml  .gitmodules  CMakeLists.txt  README.md  appkit.cmake  exclude_from_checks.lst  mpk_module.cmake  mpkit.cmake  mpkit.cspell.dict
target-service/modules/open-license-manager/: .gitignore  .gitlab-ci.yml  CMakeLists.txt  licensecc.cmake
target-service/scripts/: generate_public_key.sh  public_key_template.h
target-service/src/dss-backend/: BackendComponents.h  BackendControllerBase.cpp  BackendControllerBase.h  BackendSignals.h  CameraSignals.h  ConfigParser.h  Configuration.h
target-service/src/dss-common/: CMakeLists.txt
target-service/src/dss-core/: AlarmStatus.h  CameraApiAdapter.cpp  CameraDevice.h  CameraProperties.h  CameraProvider.h  ClsId.h  CommonApiAdapter.cpp  CommonApiAdapter.h  DeviceApiAdapter.cpp  DeviceClass.h  DeviceDataControl.h  DeviceDisabledControl.h  DeviceDisabledSignals.h  DeviceHwInfo.cpp  DeviceHwInfo.h  DeviceHwInfoControl.h  DeviceId.h  DeviceIdMapping.h  DeviceIdMappingStorage.h  DevicePosition.cpp  DevicePosition.h  DevicePositionControl.h  DevicePositionSignals.h  DevicePositionStorage.h  DeviceProvider.h  DeviceProviderSignals.h  DeviceRegistrator.cpp  DeviceRegistrator.h  DeviceStateControl.h  (+54 more)
target-service/tamerlan/: TamerlanSensor.h
tests/: .gitignore  README.md  conftest.py  devspace.yaml  pyproject.toml
tests/integration/: control_client.py  dds_client.py  test_camera.py  test_config.py  test_core_services.py  test_device_control.py  test_device_service.py  test_jammer_service.py  test_network.py  test_sensor_service.py  test_target_service.py  test_validation.py
tests/scripts/: generate_models.py
(+1242 files in other folders)
