[project]
name = "tests"
version = "0.1.0"
description = "Default template for PDM package"

requires-python = ">=3.13"
dependencies = [
    "pytest>=7.2.2",
    "pytest-asyncio>=0.20.3",
    "pytest-cov",
    "httpx>=0.24.0",
    "pydantic>=2.0.0",
]
authors = [
    {name = "Maksim Sidorov", email = "maxim_sdrv@mail.ru"},
]
readme = "README.md"
license = {text = "MIT"}

[tool.pdm]
distribution = true

[tool.pdm.dev-dependencies]
dev = []

[tool.pdm.resolution]
respect-source-order = true

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["F", "I", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
addopts = "--tb=short -v"
testpaths = [
    "integration",
]
pythonpath = [
    "integration"
]

[tool.pdm.scripts]
deps = "pdm install"
lock = "pdm lock --prod"

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"
