[project]
name = "dds-control-testing"
version = "0.1.0"
description = "DDS Control API Tests"

requires-python = ">=3.10,<4.0"
dependencies = [
    "pytest>=7.2.2",
    "pytest-asyncio>=0.20.3",
    "pytest-cov",
    "httpx",
    "pydantic",
    "age",
    "minisign @ git+https://github.com/x13a/py-minisign.git@0.10",
]

[tool.pdm.dev-dependencies]
dev = [
#    "-e file:///${PROJECT_ROOT}/../../../../common/testing",
]

[tool.pdm.resolution]
respect-source-order = true

#[build-system]
#requires = ["pdm-backend"]
#build-backend = "pdm.backend"

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["F", "I", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
#addopts = "-ra -q"
testpaths = [
    "integration",
]

[tool.pdm.scripts]
deps = "pdm update -L /dev/null --no-self"
lock = "pdm lock --prod"
