project(appkit)

add_subdirectory(boost)
add_subdirectory(config)
add_subdirectory(date)
add_subdirectory(exceptions)
add_subdirectory(httpws)
add_subdirectory(json)
add_subdirectory(log)
add_subdirectory(metric_units)
add_subdirectory(plugins)
add_subdirectory(qt)
add_subdirectory(qttypes)
add_subdirectory(rest)
add_subdirectory(rpc)
add_subdirectory(stable_link)
add_subdirectory(storage_adapter)
add_subdirectory(types)
add_subdirectory(uistatesaver)
add_subdirectory(utils)
add_subdirectory(yaml)
